--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
 </head>
 
-<body class=" bg-yellow-100">
+<body class=" bg-[#F4F7FF]">
 
   <main class="max-w-screen-xl mx-auto">
 
     <!-- navbar -->
 
-    <nav class="py-6">
-      <div class="flex justify-between navbar bg-base-100 shadow-sm rounded-lg p-5 ">
+    <nav class="py-5">
+      <div class="flex justify-between navbar bg-base-100 shadow-sm rounded-xl p-5 ">
 
 
         <div class="flex justify-center items-center">
@@ -67,22 +67,90 @@
 
     <!-- main grid  -->
 
-    <div class="grid grid-cols-4 gap-6 ">
+    <div class="grid grid-cols-4 gap-5 ">
 
 
 
       <!-- task section -->
 
-      <div class="col-span-3 bg-slate-600 rounded-lg p-5">
+      <div class="col-span-3 bg-white rounded-xl p-5 shadow-sm">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, inventore! Expedita commodi odio consectetur minus, a cum quibusdam perferendis, repudiandae officia dolorum molestiae modi itaque delectus quaerat impedit ullam magni!</p>
+        <!-- uper part -->
+
+        <div class="grid grid-cols-4 gap-5 ">
+
+          <!-- task assigned -->
+
+          <div class="bg-[#F4F7FF] p-5 flex gap-5 justify-center items-center rounded-xl">
+
+            <div class="bg-white p-3 rounded-full">
+              <img src="./assets/checkbox.png" alt="">
+            </div>
+
+            <div>
+              <p>Task Assigned</p>
+              <h3 class="text-4xl font-bold">05</h3>
+            </div>
+          </div>
+
+          <!-- blog.. discover new -->
+
+          <div id="navigate-blog"
+            class="bg-linear-to-r from-[#3752FD] to-[#9BA8F8] col-span-2 flex justify-center items-center gap-5 p-5 rounded-xl">
+
+            <img src="./assets/board.png" alt="">
+
+            <h3 class="text-xl text-black">Discover Something New Today!</h3>
+
+          </div>
+
+          <!-- date div -->
+          <div class="bg-[#F4F7FF] p-5 flex gap-5 justify-center items-center rounded-xl">
+
+            <div class="bg-white p-3 rounded-full">
+
+              <img src="./assets/calender.png" alt="">
+            </div>
+
+            <h3>Wed,<br> Jul 28 2025</h3>
+
+          </div>
+
+        </div>
+
+        <hr class="border-t border-gray-300 border-dashed my-5">
+
+        <!-- main part of task -- card container -->
+
+        <div id="task-box-container">
+
+          <!-- <div class="bg-white p-6 rounded-xl shadow-lg w-80">
+            <span class="bg-blue-100 text-blue-600 px-3 py-1 text-sm font-semibold rounded-lg">ShopEase</span>
+            <h2 class="text-xl font-bold text-gray-800 mt-3">Fix Mobile Button Issue</h2>
+            <p class="text-gray-500 text-sm mt-2">Debug using Chrome DevTools, check for overlappi...</p>
+            <div class="mt-4">
+              <p class="text-gray-500 text-xs">Deadline</p>
+              <p class="text-gray-900 font-semibold">21 March 2025</p>
+            </div>
+            <button
+              class="bg-blue-600 text-white text-sm font-semibold px-4 py-2 mt-4 rounded-lg w-full">Completed</button>
+          </div> -->
+
+<div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+    <p class="bg-white p-2 rounded-xl ">ShopEase</p>
+  
+</div>
+
+        </div>
 
       </div>
 
       <!-- acitivity log -->
 
-      <div class="col-span-1 bg-red-600 rounded-lg p-5 ">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi veritatis blanditiis illo iusto obcaecati culpa fugiat rerum doloremque! Fugit vel doloremque minus corporis tempora eveniet soluta maxime. Placeat, rerum nobis?</p>
+      <div class="col-span-1 bg-white rounded-xl p-5 shadow-sm ">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi veritatis blanditiis illo iusto obcaecati
+          culpa fugiat rerum doloremque! Fugit vel doloremque minus corporis tempora eveniet soluta maxime. Placeat,
+          rerum nobis?</p>
 
       </div>
 
