updated the design

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </div>
         <div class="flex gap-4">
-          <div class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5">
+          <div class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5 gap-4">
             <img src="./assets/checkbox.png" alt="">
             <h3 class="heading-text">23</h3>
 
@@ -122,24 +122,134 @@
 
         <!-- main part of task -- card container -->
 
-        <div id="task-box-container">
+        <div id="task-box-container
+        " class=" grid  sm:grid-cols-1 md:grid-cols-2  lg:grid-cols-3 gap-5">
 
-          <!-- <div class="bg-white p-6 rounded-xl shadow-lg w-80">
-            <span class="bg-blue-100 text-blue-600 px-3 py-1 text-sm font-semibold rounded-lg">ShopEase</span>
-            <h2 class="text-xl font-bold text-gray-800 mt-3">Fix Mobile Button Issue</h2>
-            <p class="text-gray-500 text-sm mt-2">Debug using Chrome DevTools, check for overlappi...</p>
-            <div class="mt-4">
-              <p class="text-gray-500 text-xs">Deadline</p>
-              <p class="text-gray-900 font-semibold">21 March 2025</p>
+          <!-- card shopeEase-->
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
             </div>
-            <button
-              class="bg-blue-600 text-white text-sm font-semibold px-4 py-2 mt-4 rounded-lg w-full">Completed</button>
-          </div> -->
 
-<div class="task-box bg-[#F4F7FF] rounded-xl p-5">
-    <p class="bg-white p-2 rounded-xl ">ShopEase</p>
-  
-</div>
+          </div>
+
+          <!-- card CloudSync -->
+
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
+            </div>
+
+          </div>
+
+          <!-- card SwiftPay -->
+
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
+            </div>
+
+          </div>
+
+          <!-- card Meta -->
+
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
+            </div>
+
+          </div>
+
+          <!-- card google -->
+
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
+            </div>
+
+          </div>
+
+          <!-- card glassdoar -->
+
+
+          <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
+            <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+
+            <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
+              elements, and ensure onClick works properly
+              and ensure onClick works properly</p>
+            <hr class="border-t border-gray-300 border-dashed my-5">
+
+            <div class="flex justify-between items-center">
+              <div>
+                <p>Deadline</p>
+                <h3>21 March 2025</h3>
+              </div>
+              <button class="btn btn-primary">Completed</button>
+            </div>
+
+          </div>
 
         </div>
 
@@ -147,12 +257,27 @@
 
       <!-- acitivity log -->
 
-      <div class="col-span-1 bg-white rounded-xl p-5 shadow-sm ">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi veritatis blanditiis illo iusto obcaecati
-          culpa fugiat rerum doloremque! Fugit vel doloremque minus corporis tempora eveniet soluta maxime. Placeat,
-          rerum nobis?</p>
+      <div class="col-span-1 bg-white rounded-xl p-5 shadow-sm flex flex-col items-center ">
+        <div class="flex justify-center items-center gap-5 my-5">
+          <img src="./assets/activity.png" alt="">
+          <h3 class="heading-text">Activity Log</h3>
+        </div>
+
+        <button class="btn btn-primary w-2/3 mb-4 ">Clear History</button>
+
+
+        <div id="history">
+
+        </div>
+
+
+    
 
       </div>
+
+      
+
+
 
 
     </div>
