updated the completed task functionality

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
         </div>
         <div class="flex gap-4">
-          <div class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5 gap-4">
+          <div  class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5 gap-4">
             <img src="./assets/checkbox.png" alt="">
-            <h3 class="heading-text">23</h3>
+            <h3 id="completed-task" class="heading-text">24</h3>
 
           </div>
 
@@ -89,7 +89,7 @@
 
             <div>
               <p>Task Assigned</p>
-              <h3 class="text-4xl font-bold">05</h3>
+              <h3 id="remaining-task" class="text-4xl font-bold">6</h3>
             </div>
           </div>
 
@@ -128,7 +128,7 @@
           <!-- card shopeEase-->
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -140,7 +140,7 @@
                 <p>Deadline</p>
                 <h3>21 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -149,7 +149,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Add Dark Mode</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -161,7 +161,7 @@
                 <p>Deadline</p>
                 <h3>21 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -170,7 +170,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Optimize  Home page</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -182,7 +182,7 @@
                 <p>Deadline</p>
                 <h3>21 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -191,7 +191,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Add new emoji😊</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -201,9 +201,9 @@
             <div class="flex justify-between items-center">
               <div>
                 <p>Deadline</p>
-                <h3>21 March 2025</h3>
+                <h3>29 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -212,7 +212,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Integrate OpenAI API</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -222,9 +222,9 @@
             <div class="flex justify-between items-center">
               <div>
                 <p>Deadline</p>
-                <h3>21 March 2025</h3>
+                <h3>3 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -234,7 +234,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Fix Mobile Button Issue </h3>
+            <h3 class="card-title heading-text my-4">Improve Job searching</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -244,9 +244,9 @@
             <div class="flex justify-between items-center">
               <div>
                 <p>Deadline</p>
-                <h3>21 March 2025</h3>
+                <h3>25 March 2025</h3>
               </div>
-              <button class="btn btn-primary">Completed</button>
+              <button class="btn btn-primary task-btn">Completed</button>
             </div>
 
           </div>
@@ -283,6 +283,11 @@
     </div>
 
   </main>
+
+
+  <script src="scripts/script.js"></script>
+  <script src="./scripts/utilites.js"></script>
+  <script src="./scripts/toggle.js"></script>
 
 </body>
 
