updated (activity log and clear history)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </div>
         <div class="flex gap-4">
-          <div  class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5 gap-4">
+          <div class="bg-[#F4F7FF] flex justify-center items-center border-none rounded-full px-5 gap-4">
             <img src="./assets/checkbox.png" alt="">
             <h3 id="completed-task" class="heading-text">24</h3>
 
@@ -170,7 +170,7 @@
 
           <div class="task-box bg-[#F4F7FF] rounded-xl p-5">
             <span class="bg-white px-4 py-2 rounded-xl text-center">ShopEase</span>
-            <h3 class="card-title heading-text my-4">Optimize  Home page</h3>
+            <h3 class="card-title heading-text my-4">Optimize Home page</h3>
 
             <p class="bg-white opacity-50 rounded-xl p-5 mb-4">Debug using Chrome DevTools, check for overlapping
               elements, and ensure onClick works properly
@@ -257,13 +257,15 @@
 
       <!-- acitivity log -->
 
-      <div class="col-span-1 bg-white rounded-xl p-5 shadow-sm flex flex-col items-center ">
+      <div class="col-span-1 bg-white rounded-xl p-5 shadow-sm ">
         <div class="flex justify-center items-center gap-5 my-5">
           <img src="./assets/activity.png" alt="">
           <h3 class="heading-text">Activity Log</h3>
         </div>
 
-        <button class="btn btn-primary w-2/3 mb-4 ">Clear History</button>
+        <div class="text-center">
+          <button id="clear-history-btn" class="btn btn-primary mb-4  ">Clear History</button>
+        </div>
 
 
         <div id="history">
@@ -271,11 +273,11 @@
         </div>
 
 
-    
+
 
       </div>
 
-      
+
 
 
 
